feat: complete library management workflow